--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -163,3 +163,13 @@
 .micromodal-slide .modal__overlay {
     will-change: transform;
 }
+
+.esp-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    height: 100vh;
+    width: 100vw;
+    z-index: 9999;
+}
