--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -165,11 +165,14 @@
 }
 
 .esp-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: none;
-    height: 100vh;
-    width: 100vw;
-    z-index: 9999;
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    display: none !important;
+    height: 100vh !important;
+    width: 100vw !important;
+    background-color: rgba(169, 169, 169, 0.5);
+    z-index: 9999 !important;
+    max-width: unset !important;
+    max-height: unset !important;
 }
