--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -176,3 +176,7 @@
     max-width: unset !important;
     max-height: unset !important;
 }
+
+#eventbrite-widget-container > iframe {
+    height: 100% !important;
+}
